# fxci-etl

./: .pre-commit-config.yaml  .taskcluster.yml  README.md  pyproject.toml  tox.ini
docs/: conf.py  index.rst
src/fxci_etl/: config.py  console.py  pulse.py
src/fxci_etl/loaders/: bigquery.py
src/fxci_etl/metric/: export.py
src/fxci_etl/pulse/: __init__.py  consume.py  listen.py
src/fxci_etl/pulse/handlers/: __init__.py  base.py  bigquery.py  bigquery_insert.py  log.py
src/fxci_etl/util/: python_path.py
taskcluster/ci/: config.yml
taskcluster/ci/codecov/: kind.yml
taskcluster/ci/docker-image/: kind.yml
taskcluster/scripts/: codecov-upload.py
test/: test_fxci_etl.py
